--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,12 @@
+<!--
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: app
+  ~ FileName: styles.xml
+  ~ ClassName: styles.xml
+  ~ LastModified: 10/11/17 10:55 AM
+  -->
+
 <resources>
 
     <!-- Base application theme. -->
