--- a/xjlib/src/main/res/anim/slide_out_left.xml
+++ b/xjlib/src/main/res/anim/slide_out_left.xml
@@ -3,8 +3,8 @@
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
-  ~ FileName: trans_left_out.xml
-  ~ ClassName: trans_left_out.xml
+  ~ FileName: slide_out_left.xml
+  ~ ClassName: slide_out_left.xml
   ~ LastModified: 2/5/17 8:27 PM
   -->
 
