--- a/xjlib/src/main/res/anim/slide_out_right.xml
+++ b/xjlib/src/main/res/anim/slide_out_right.xml
@@ -3,8 +3,8 @@
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
-  ~ FileName: trans_right_out.xml
-  ~ ClassName: trans_right_out.xml
+  ~ FileName: slide_out_right.xml
+  ~ ClassName: slide_out_right.xml
   ~ LastModified: 2/5/17 8:27 PM
   -->
 
