--- a/xjlib/src/main/res/anim/slede_in_right.xml
+++ b/xjlib/src/main/res/anim/slede_in_right.xml
@@ -3,14 +3,15 @@
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
-  ~ FileName: anim_slide_in_left.xml
-  ~ ClassName: anim_slide_in_left.xml
+  ~ FileName: slede_in_right.xml
+  ~ ClassName: slede_in_right.xml
   ~ LastModified: 2/5/17 8:27 PM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
+
     <translate
-        android:duration="600"
-        android:fromXDelta="100%"
-        android:toXDelta="0%"></translate>
+        android:duration="@android:integer/config_longAnimTime"
+        android:fromXDelta="-100%p"
+        android:toXDelta="0" />
 </set>
