--- a/xjlib/src/main/res/anim/slide_in_left.xml
+++ b/xjlib/src/main/res/anim/slide_in_left.xml
@@ -3,15 +3,14 @@
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
-  ~ FileName: trans_right_in.xml
-  ~ ClassName: trans_right_in.xml
+  ~ FileName: slide_in_left.xml
+  ~ ClassName: slide_in_left.xml
   ~ LastModified: 2/5/17 8:27 PM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-
     <translate
         android:duration="@android:integer/config_longAnimTime"
-        android:fromXDelta="-100%p"
+        android:fromXDelta="100%p"
         android:toXDelta="0" />
 </set>
