--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: app
   ~ FileName: styles.xml
   ~ ClassName: styles.xml
-  ~ LastModified: 10/11/17 10:55 AM
+  ~ LastModified: 10/11/17 2:36 PM
   -->
 
 <resources>
