--- a/xjlib/src/main/res/values/colors.xml
+++ b/xjlib/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: colors.xml
   ~ ClassName: colors.xml
-  ~ LastModified: 10/11/17 11:56 AM
+  ~ LastModified: 10/11/17 2:36 PM
   -->
 
 <resources>
