--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: app
   ~ FileName: colors.xml
   ~ ClassName: colors.xml
-  ~ LastModified: 10/11/17 10:55 AM
+  ~ LastModified: 10/11/17 2:36 PM
   -->
 
 <resources>
