--- a/xjlib/src/main/res/drawable/selector_item_click.xml
+++ b/xjlib/src/main/res/drawable/selector_item_click.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
+  ~ FileName: selector_item_click.xml
+  ~ ClassName: selector_item_click.xml
+  ~ LastModified: 2/5/17 8:27 PM
+  -->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/on_bg" android:state_pressed="true" />
