--- a/xjlib/src/main/res/layout/tool_bar.xml
+++ b/xjlib/src/main/res/layout/tool_bar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2016 gzmhxx.com created by xjl
-  ~ ProjectName: Doctor
-  ~ ModuleName: app
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
   ~ FileName: tool_bar.xml
   ~ ClassName: tool_bar.xml
-  ~ LastModified: 16-10-20 下午5:28
+  ~ LastModified: 2/5/17 8:27 PM
   -->
 
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
