--- a/xjlib/src/main/res/layout/view_divider.xml
+++ b/xjlib/src/main/res/layout/view_divider.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2016 gzmhxx.com created by xjl
-  ~ ProjectName: Doctor
-  ~ ModuleName: app
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
   ~ FileName: view_divider.xml
   ~ ClassName: view_divider.xml
-  ~ LastModified: 16-10-20 下午5:28
+  ~ LastModified: 2/5/17 8:27 PM
   -->
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
