--- a/xjlib/src/main/res/values/styles.xml
+++ b/xjlib/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <!--
-  ~ Copyright (c) 2016 gzmhxx.com created by xjl
-  ~ ProjectName: Doctor
-  ~ ModuleName: app
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
   ~ FileName: styles.xml
   ~ ClassName: styles.xml
-  ~ LastModified: 16-10-20 下午5:28
+  ~ LastModified: 10/11/17 5:04 PM
   -->
 
 <resources>
