--- a/xjlib/src/main/res/layout/tool_bar.xml
+++ b/xjlib/src/main/res/layout/tool_bar.xml
@@ -1,12 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2017 xjliao.me created by xjliao
-  ~ ProjectName: xjl
-  ~ ModuleName: xjlib
-  ~ FileName: tool_bar.xml
-  ~ ClassName: tool_bar.xml
-  ~ LastModified: 2/5/17 8:27 PM
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
