--- a/xjlib/src/main/res/values/styles.xml
+++ b/xjlib/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <!--<item name="colorAccent">@color/colorAccent</item>-->
         <item name="android:windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="titleTextColor">@color/white</item>
         <!--<item name="android:fitsSystemWindows">true</item>-->
     </style>
 
