--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: app
   ~ FileName: activity_login.xml
   ~ ClassName: activity_login.xml
-  ~ LastModified: 10/18/17 3:14 PM
+  ~ LastModified: 10/19/17 10:31 AM
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
