--- a/xjlib/src/main/res/anim/slide_out_down.xml
+++ b/xjlib/src/main/res/anim/slide_out_down.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: slide_out_down.xml
   ~ ClassName: slide_out_down.xml
-  ~ LastModified: 10/18/17 3:52 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
