--- a/xjlib/src/main/res/drawable/shape_universal_fillet_rectangle_normal.xml
+++ b/xjlib/src/main/res/drawable/shape_universal_fillet_rectangle_normal.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: shape_universal_fillet_rectangle_normal.xml
   ~ ClassName: shape_universal_fillet_rectangle_normal.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
