--- a/xjlib/src/main/res/layout/activity_fragment_container.xml
+++ b/xjlib/src/main/res/layout/activity_fragment_container.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
+  ~ FileName: activity_fragment_container.xml
+  ~ ClassName: activity_fragment_container.xml
+  ~ LastModified: 10/19/17 1:51 PM
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
