--- a/xjlib/src/main/res/layout/fragment_dialog_x.xml
+++ b/xjlib/src/main/res/layout/fragment_dialog_x.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: fragment_dialog_x.xml
   ~ ClassName: fragment_dialog_x.xml
-  ~ LastModified: 2/5/17 8:27 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
