--- a/xjlib/src/main/res/anim/pophidden_anim.xml
+++ b/xjlib/src/main/res/anim/pophidden_anim.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: pophidden_anim.xml
   ~ ClassName: pophidden_anim.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
