--- a/xjlib/src/main/res/anim/rotation180_360.xml
+++ b/xjlib/src/main/res/anim/rotation180_360.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: rotation180_360.xml
   ~ ClassName: rotation180_360.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
