--- a/xjlib/src/main/res/anim/slede_in_right.xml
+++ b/xjlib/src/main/res/anim/slede_in_right.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: slede_in_right.xml
   ~ ClassName: slede_in_right.xml
-  ~ LastModified: 10/18/17 4:06 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
