--- a/xjlib/src/main/res/anim/slide_out_left.xml
+++ b/xjlib/src/main/res/anim/slide_out_left.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: slide_out_left.xml
   ~ ClassName: slide_out_left.xml
-  ~ LastModified: 10/18/17 4:06 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
