--- a/xjlib/src/main/res/drawable/selector_item_click.xml
+++ b/xjlib/src/main/res/drawable/selector_item_click.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: selector_item_click.xml
   ~ ClassName: selector_item_click.xml
-  ~ LastModified: 2/5/17 8:27 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
