--- a/xjlib/src/main/res/drawable/selector_universal_btn.xml
+++ b/xjlib/src/main/res/drawable/selector_universal_btn.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: selector_universal_btn.xml
   ~ ClassName: selector_universal_btn.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
