--- a/xjlib/src/main/res/drawable/shape_edittext_rectangle_bg.xml
+++ b/xjlib/src/main/res/drawable/shape_edittext_rectangle_bg.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: shape_edittext_rectangle_bg.xml
   ~ ClassName: shape_edittext_rectangle_bg.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
