--- a/xjlib/src/main/res/layout/view_divider.xml
+++ b/xjlib/src/main/res/layout/view_divider.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: view_divider.xml
   ~ ClassName: view_divider.xml
-  ~ LastModified: 2/5/17 8:27 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
