--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: app
   ~ FileName: activity_main.xml
   ~ ClassName: activity_main.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
