--- a/xjlib/src/main/res/anim/slide_out_right.xml
+++ b/xjlib/src/main/res/anim/slide_out_right.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: slide_out_right.xml
   ~ ClassName: slide_out_right.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <set xmlns:android="http://schemas.android.com/apk/res/android">
