--- a/xjlib/src/main/res/drawable/selector_oval_btn.xml
+++ b/xjlib/src/main/res/drawable/selector_oval_btn.xml
@@ -5,7 +5,7 @@
   ~ ModuleName: xjlib
   ~ FileName: selector_oval_btn.xml
   ~ ClassName: selector_oval_btn.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
