--- a/xjlib/src/main/res/drawable/selector_universal_btn_text.xml
+++ b/xjlib/src/main/res/drawable/selector_universal_btn_text.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: selector_universal_btn_text.xml
   ~ ClassName: selector_universal_btn_text.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
