--- a/xjlib/src/main/res/drawable/shape_oval_btn_normal.xml
+++ b/xjlib/src/main/res/drawable/shape_oval_btn_normal.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: shape_oval_btn_normal.xml
   ~ ClassName: shape_oval_btn_normal.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
