--- a/xjlib/src/main/res/layout/view_divider.xml
+++ b/xjlib/src/main/res/layout/view_divider.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
@@ -10,7 +9,7 @@
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/primary_divider"
-    android:layout_height="0.5dp">
+    android:layout_height="0.5dp"
+    android:background="@color/primary_divider">
 
 </View>
