--- a/xjlib/src/main/res/values/attrs.xml
+++ b/xjlib/src/main/res/values/attrs.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
@@ -9,7 +8,7 @@
   -->
 <resources>
     <declare-styleable name="XButton">
-        <attr name="preActionAble" format="boolean"/>
-        <attr name="preActionText" format="string"/>
+        <attr name="preActionAble" format="boolean" />
+        <attr name="preActionText" format="string" />
     </declare-styleable>
 </resources>
