--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="me.xjliao.xjl.LoginActivity">
+    tools:context="me.xjliao.xjl.view.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
