--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent"
-    tools:context="me.xjliao.xjl.MainActivity">
+    tools:context="me.xjliao.xjl.view.MainActivity">
 
     <TextView
         android:layout_width="100dp"
@@ -24,6 +24,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/auth_settings_button"
+        android:text="指纹认证设置"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/back"
