--- a/xjlib/src/main/res/values-v21/styles.xml
+++ b/xjlib/src/main/res/values-v21/styles.xml
@@ -34,11 +34,15 @@
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
         <item name="android:fitsSystemWindows">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
     <style name="AuthenticationTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:fitsSystemWindows">true</item>
     </style>
 </resources>
